applying code review suggestions

--- a/docs/references/nextjs/authentication-object.mdx
+++ b/docs/references/nextjs/authentication-object.mdx
@@ -27,23 +27,25 @@ Both [`auth()`](/docs/references/nextjs/auth) and  [`getAuth()`](/docs/reference
 
 The `orgRole` property on the `Authentication` object has the type `OrganizationCustomRoleKey`.
 
-`OrganizationCustomRoleKey` is a string that represents the role of the user in the organization. Clerk provides the [default roles](/docs/organizations/roles-permissions#default-roles) `org:admin` and `org:member`. However, [custom roles can be created](/docs/organizations/create-roles-permissions) and used as well.
+`OrganizationCustomRoleKey` is a string that represents the user's role in the organization. Clerk provides the [default roles](/docs/organizations/roles-permissions#default-roles) `org:admin` and `org:member`. However, you can create [custom roles](/docs/organizations/create-roles-permissions) as well.
 
 ### `OrganizationCustomPermissionKey`
 
 The `orgPermissions` property on the `Authentication` object has the type `OrganizationCustomPermissionKey`.
 
-`OrganizationCustomPermissionKey` is a string that represents the permission of the user in the organization. Clerk provides [default System Permissions](/docs/organizations/roles-permissions#permissions). However, [custom permissions can be created](/docs/organizations/create-roles-permissions#create-a-new-permission-for-your-organization) and used as well.
+`OrganizationCustomPermissionKey` is a string that represents the permission of the user in the organization. Clerk provides [default System Permissions](/docs/organizations/roles-permissions#system-permissions), and you can create [custom permissions](/docs/organizations/create-roles-permissions#create-a-new-permission-for-your-organization).
 
 ### `has()`
 
-Clerk's `has()` helper can be used on both the frontend and the backend to determine if the user *has* a role or permission.
+`has()` can be used on both the frontend and the backend to determine if the user *has* a role or permission.
 
-`has()` can be used anywhere that Clerk returns an [`Authentication` object](/docs/references/nextjs/authentication-object):
+You can use `has()` anywhere Clerk returns an [`Authentication`](/docs/references/nextjs/authentication-object) object:
 
 - [`auth()`](/docs/references/nextjs/auth) in Next.js App Router
 - [`useAuth()`](/docs/references/react/use-auth) in Client Components, including during SSR
 - [`getAuth(request)`](/docs/references/nextjs/get-auth) in server contexts outside of the App Router and SSR (Remix Loaders, Node, Express, Fastify, etc)
+
+`has()` has the following function signature:
 
 ```typescript
 function has(isAuthorizedParams: CheckAuthorizationParamsWithCustomPermissions) => boolean;
@@ -51,7 +53,7 @@ function has(isAuthorizedParams: CheckAuthorizationParamsWithCustomPermissions) 
 
 #### `CheckAuthorizationParamsWithCustomPermissions`
 
-`has()` accepts an `isAuthorizedParams` parameter. The `isAuthorizedParams` parameter, with the type `CheckAuthorizationParamsWithCustomPermissions`, is an object with either a `role` or a `permission`, or both can be used together.
+`CheckAuthorizationParamsWithCustomPermissions` has the following properties:
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -60,7 +62,11 @@ function has(isAuthorizedParams: CheckAuthorizationParamsWithCustomPermissions) 
 
 #### `has()` example
 
-You can use `has()` in order to check if a user is authorized to access a component. In the following example, `has()` is used to check if the user has the `org:team_settings:manage` permission. If the user does not have the permission, `null` is returned and the "Team Settings" component is not rendered.
+You can use `has()` to check if a user is authorized to access a component. 
+
+In the following example:
+- `has()` is used to check if the user has the `org:team_settings:manage` permission.
+- If the user does not have the permission, `null` is returned and the "Team Settings" component is not rendered.
 
 ```tsx filename="app/page.tsx"
 import { auth } from '@clerk/nextjs';
@@ -78,7 +84,7 @@ export default async function Page() {
 
 ### `getToken()`
 
-The `getToken()` method on the `Authentication` object can be used to retrieve the current user's session token. This method can also be used to retrieve a custom JWT template. It has the type `ServerGetToken`.
+You can use `getToken()` on an `Authentication` object to retrieve the current user's session token. You can also use this method to retrieve a custom JWT template. It has the type `ServerGetToken`.
 
 #### `ServerGetToken`
 
@@ -88,7 +94,7 @@ type ServerGetToken = (options?: ServerGetTokenOptions) => Promise<string | null
 
 #### `ServerGetTokenOptions`
 
-The `getToken()` method on the `Authentication` object accepts an optional `options` parameter. The `options` parameter, with the type `ServerGetTokenOptions`, is an object with the following properties:
+`getToken()` accepts an optional `options` parameter, which has the following properties:
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -96,7 +102,7 @@ The `getToken()` method on the `Authentication` object accepts an optional `opti
 
 ## `Authentication` object example without active organization
 
-The following is an example of the `Authentication` object without an active organization.
+The following is an example of the `Authentication` object without an active organization:
 
 ```js
 {
@@ -122,7 +128,7 @@ The following is an example of the `Authentication` object without an active org
 
 ## `Authentication` object example with active organization
 
-The following is an example of the `Authentication` object with an active organization.
+The following is an example of the `Authentication` object with an active organization:
 
 ```js
 {
