--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -15,14 +15,14 @@ A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middlewar
 
 `auth()` returns the [`Authentication`](/docs/references/nextjs/authentication-object) object with a few extra properties:
 
-| Name | Type | Description |
-| --- | --- | --- |
-| [`protect`](#protect) | Function | Accepts a permission or a role key or a function with `has` as the first parameter. It will throw a `notFound` Next.js error if the user is unauthorized. Otherwise, it returns an `Authentication` object. |
-| [`redirectToSignIn`](#redirect-to-sign-in) | Function | Redirects the user to the sign-in page. |
+- [`protect()`](#protect)
+- [`redirectToSignIn()`](#redirect-to-sign-in)
 
 ### `protect()`
 
-You can use the `protect()` helper to check if a user is authorized to access a component. It will return the `Authentication` object if the user is authorized. If the user is not authorized, it will throw a `notFound` Next.js error.
+You can use the `protect()` helper to check if a user is authorized to access something, such as a component or a route handler. 
+
+`protect()` will return the `Authentication` object if the user is authorized. If the user is not authorized, it will throw a `notFound` Next.js error.
 
 <Callout type="warning">
   `auth().protect()` only works for App Router and is considered experimental.
@@ -46,7 +46,7 @@ You can use the `protect()` helper to check if a user is authorized to access a 
 
 ## Use `auth()` to retrieve `userId`
 
-```tsx filename="app/page.[jsx/tsx]"
+```tsx filename="app/page.tsx"
 import { auth } from '@clerk/nextjs';
 
 export default function Page() {
@@ -59,8 +59,7 @@ const { userId } : { userId: string | null } = auth();
 
 When using a Clerk integration, or if you need to send a JWT along to a server, you can use the `getToken` function.
 
-```tsx filename="app/api/example/route.[jsx/tsx]"
-import { NextResponse } from 'next/server';
+```tsx filename="app/api/example/route.ts"
 import { auth } from '@clerk/nextjs';
 
 export async function GET() {
@@ -70,19 +69,23 @@ export async function GET() {
     return new Response("Unauthorized", { status: 401 });
   }
 
-  const token = await getToken({template: "supabase"});
+  try {
+    const token = await getToken({template: "supabase"});
 
-  // Add logic here to fetch data from Supabase and return it.
+    // Add logic here to fetch data from Supabase and return it.
   
-  const data = { supabaseData: 'Hello World' };
+    const data = { supabaseData: 'Hello World' };
   
-  return NextResponse.json({ data });
+    return Response.json({ data });
+  } catch (error) {
+    return Response.json(error);
+  }
 }
 ```
 
 ## Use `auth()` to check if a user is authorized
 
-`auth()` returns the `Authentication` object, which includes the `has()` helper. `auth()` also returns the `protect()` helper. 
+`auth()` returns the [`Authentication`](/docs/references/nextjs/authentication-object#authentication-object) object, which includes the `has()` helper. `auth()` also returns the `protect()` helper.
 
 `has()` and `protect()` can be used to check if a user is authorized to access certain parts of your application.
 
@@ -90,7 +93,10 @@ export async function GET() {
 
 Use the [`has()`](/docs/references/nextjs/authentication-object#has) helper in order to check if a user is authorized to access a component.
 
-In the following example, the `has()` helper is used to check if a user has the `org:team_settings:manage` permission. If the user does not have the permission, `null` is returned. If the user has the permission, the component will return the "Team Settings" heading.
+In the following example:
+- `has()` is used to check if a user has the `org:team_settings:manage` permission.
+- If the user does not have the permission, `null` is returned.
+- If the user has the permission, the component will return the "Team Settings" heading.
 
 ```tsx filename="app/page.tsx"
 import { auth } from '@clerk/nextjs';
@@ -114,7 +120,10 @@ Use the [`protect()`](#protect) helper to protect a route handler from unauthori
   `auth().protect()` only works for App Router and is considered experimental.
 </Callout>
 
-In the following example, the `protect()` helper is used to check if a user is authorized to access a route handler. If the user is not authorized, the `protect()` helper will throw a `notFound` Next.js error. If the user is authorized, the `protect()` helper will return the `Authentication` object, which has the `userId` property.
+In the following example:
+- `protect()` helper is used to check if a user is authorized to access a route handler. 
+- If the user is not authorized, the `protect()` helper will throw a `notFound` Next.js error. 
+- If the user is authorized, the `protect()` helper will return the `Authentication` object, which has the `userId` property.
 
 ```tsx filename="app/api/route.ts"
 import { auth } from "@clerk/nextjs";
@@ -130,9 +139,9 @@ export const POST = () => {
 
 In some cases, you need to check your user's current organization role before displaying data or allowing certain actions to be performed. 
 
-You can use the `orgRole` property of the `Authentication` object, which is returned by the `auth()` helper, to check the user's current role.
+Check the current user's role with the `orgRole` property of the `Authentication` object returned by `auth()`, as shown in the following example:
 
-```tsx filename="app/page.[jsx/tsx]"
+```tsx filename="app/page.tsx"
 import { auth } from '@clerk/nextjs';
 
 export default async function Page() {
