--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -1,93 +1,28 @@
 ---
-title: Sign out
-description: Learn how to sign-out users.
+title: Build a custom sign-out flow
+description: Learn how to build a custom sign-out flow using Clerk's signOut() function.
 ---
 
-# Sign out
+# Build a custom sign-out flow
 
-Once you have a signed-in user, you need to give them a way to sign out.
+Clerk's [`<UserButton />`](/docs/components/user/user-button) and [`<SignOutButton />`](/docs/components/unstyled/sign-out-button) components provide a way to sign out users, out of the box. However, if you are building a custom solution, you can use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) function to sign out users.
 
-Please note that the sign-out flow only deactivates the current session. Other valid sessions that correspond to the same user (e.g. if the user is signed in on another computer) will continue to work.
+The `signOut()` function signs a user out of all sessions in a [multi-session application](/docs/custom-flows/multi-session-applications), or simply the current session in a single-session context. You can also specify a specific session to sign out by passing the `sessionId` parameter.
 
-You can either sign out users in Clerk by utilizing [Clerk Components](/docs/components/overview) or by building a completely custom flow.
+Please note that the sign-out flow only deactivates the current session. Other valid sessions corresponding to the same user (for example, if the user is signed in on another computer) will continue to work.
 
-## Before you start
+<Tabs type="framework" options={["Next.js", "JavaScript"]}>
+<Tab>
+The [`useClerk()`](/docs/references/react/use-clerk) hook is used to access the `signOut()` function, which is then called when the user clicks the sign-out button.
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
-- You need to install the correct SDK for your application. You can find steps on how to do so through Clerk's [quickstart](/docs/quickstarts/overview) guides.
-
-## Components that provide sign out options
-* [`<UserButton />`](/docs/components/user/user-profile)
-* [`<SignOutButton /`](/docs/components/unstyled/sign-up-button)
-
-The simplest way to sign out users is via the [`<UserButton />`][user-button] component. The [`<UserButton />`][user-button] is a pre-built UI component that gives a signed-in user a way to manage their account. One of the options is a **Sign out** button.
-
-<Images
-  width={880}
-  height={666}
-  src="/docs/images/custom-flows/sign-out.jpg"
-  alt="The User Button component with the 'Sign out' option hovered over."
-/>
-
-In an application with [multi-session](/docs/custom-flows/multi-session-applications) enabled and with more than one account signed in, the [`<UserButton />`][user-button] component will also display a **Sign out of all accounts** option.
-
-<Images
-  width={880}
-  height={666}
-  src="/docs/images/custom-flows/user-button-multisession.jpg"
-  alt="The User Button component with multiple accounts signed in."
-/>
-
-<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
-```jsx
-import { UserButton } from "@clerk/clerk-react";
-
-const Header = () => {
-  return (
-    <header>
-      <h1>My application</h1>
-
-      <UserButton />
-    </header>
-  );
-};
-```
-
-```html
-<html>
-<body>
-    <header>
-        <h1>My application</h1>
-
-        <div id="user-button"></div>
-    </header>
-
-    <script>
-        const el = document.getElementById("user-button");
-
-        // Mount the pre-built Clerk UserButton component
-        // in an HTMLElement on your page.
-        window.Clerk.mountUserButton(el);
-    </script>
-</body>
-</html>
-```
-</CodeBlockTabs>
-
-## Custom sign-out
-
-If the pre-built `<UserButton />` doesn't cover your needs, you can use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) function to build a custom solution.
-
-In this example, the [`useClerk()`](/docs/references/react/use-clerk) hook is used to access the [`signOut()`](https://clerk.com/docs/references/javascript/clerk/clerk#sign-out) function. We then use the [`useRouter()`](https://nextjs.org/docs/pages/api-reference/functions/use-router) hook from Next.js to redirect the user to the home page (`/`) after they sign out.
-
-<CodeBlockTabs type="framework" options={["Next.js", "JavaScript"]}>
+The Next.js [`useRouter()`](https://nextjs.org/docs/api-reference/next/router#userouter) hook is used to redirect the user to the home page after they sign out.
 ```jsx
 'use client'
 
 import { useClerk } from "@clerk/nextjs";
 import { useRouter } from 'next/navigation'
 
-// Import this component where you want to display a Sign Out button
+// Import this component where you want to display a sign-out button
 const SignOutButton = () => {
   const { signOut } = useClerk();
   const router = useRouter()
@@ -100,11 +35,13 @@ const SignOutButton = () => {
   );
 };
 ```
+</Tab>
 
+<Tab>
+{/* TODO (Roy): Use CodeBlockTabs and add example for NPM Module vs window.Clerk (Script) - see the /docs/components/user-button update I did in this PR */}
 ```js
 // Signs-out the current user.
 await window.Clerk.signOut();
 ```
-</CodeBlockTabs>
-
-[user-button]: /docs/components/user/user-button
+</Tab>
+</Tabs>
