--- a/docs/organizations/custom-organization-switcher.mdx
+++ b/docs/organizations/custom-organization-switcher.mdx
@@ -7,7 +7,9 @@ description: Learn how to build a custom organization switcher using the useOrga
 
 If you need more control than what Clerk's prebuilt [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component provides, you can build your own organization switcher using the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook.
 
-The example below is written for Next.js App Router, but it is supported by any React meta framework, such as Remix or Gatsby. 
+In the following example, the `useOrganizationList()` hook is used to fetch `userMemberships`, which contains a `data` array of the user's organizations. The `data` array is paginated and will only return the first 10 results, so the `fetchNext()` method is used to load more organizations if they are available. For more information about the properties and methods available on the `userMemberships` object, visit the [`useOrganizationList()` reference page](https://clerk.com/docs/references/react/use-organization-list#paginated-resources).
+
+The example is written for Next.js App Router, but it is supported by any React meta framework, such as Remix or Gatsby. 
 
 To get started, create a new file called `OrganizationSwitcher.tsx` and paste the following code into it. You can place this file anywhere in your project, but in this example, it is placed in a folder called `components`.
 
@@ -53,5 +55,3 @@ export const CustomOrganizationSwitcher = () => {
   );
 };
 ```
-
-In this example, the `useOrganizationList()` hook is used to fetch `userMemberships`, which contains a `data` array of the user's organizations. The `data` array is paginated and will only return the first 10 results, so the `fetchNext()` method is used to load more organizations if they are available. For more information about the properties and methods available on the `userMemberships` object, visit the [`useOrganizationList()` reference page](https://clerk.com/docs/references/react/use-organization-list#paginated-resources).
