--- a/docs/authentication/configuration/sign-up-sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-up-sign-in-options.mdx
@@ -142,7 +142,7 @@ Clerk currently offers the following MFA strategies:
 
 Once MFA is turned on, registered users can turn on MFA for their own account through their [User Profile](/docs/account-portal/user-profile-org-profile#user-profile) page. However, if you are building a custom user interface, you can [use the Clerk API to build a custom user interface that allows users to add MFA to their account](/docs/custom-flows/add-mfa). Then, you can [build a custom multi-factor sign-in flow](/docs/custom-flows/email-password-mfa) that allows users to sign in with MFA.
 
-## Set sign-up restrictions
+## Sign-up restrictions
 
 Clerk provides a set of restriction options designed to provide you with enhanced control over who can gain access to your application. Through these restriction settings, you can limit sign-ups or prevent accounts with specific identifiers from accessing your application. These identifiers can be email addresses, phone numbers, and even entire domains. Learn more about restrictions in our [detailed guide](/docs/authentication/configuration/restrictions).
 
