--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -1,6 +1,6 @@
 ---
-title: Add authentication and user management to your Next.js app with Clerk in 7 minutes
-description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly on both client side and server side components.
+title: Next.js Quickstart
+description: Add authentication and user management to your Next.js app with Clerk.
 ---
 
 <TutorialHero
@@ -21,7 +21,8 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 - Set up your environment keys
 - Wrap your Next.js app in `<ClerkProvider />`
 - Limit access to authenticated users
-- Embed the `<UserButton />`
+- Specify which routes are publicly accessible
+- Enable users to manage their session with `<UserButton />`
 
 </TutorialHero>
 
@@ -29,7 +30,9 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 ### Install `@clerk/nextjs`
 
-Clerk's Next.js SDK gives you access to prebuilt [components](/docs/components/overview), [hooks](/docs/references/nextjs/overview#client-side-helpers), and [helpers](/docs/references/nextjs/overview) for Next.js Server Components, Route Handlers and Middleware. Install it by running the following command in your terminal:
+Clerk's [Next.js SDK](/docs/references/nextjs/overview) has prebuilt components, React hooks, and helpers to make user authentication easier.
+
+To get started using Clerk with Next.js, add the SDK to your project:
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
@@ -46,38 +49,34 @@ pnpm add @clerk/nextjs
 
 </CodeBlockTabs>
 
-### Set environment keys
+### Set your environment keys
 
-In your Next.js project's root folder, you may have a `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
+1. If you don't have a `.env.local` file in the root directory of your Next.js project, create one now.
+2. Find your secret key and publishable key. If you're signed into Clerk, the `.env.local` snippet below will contain your both. Otherwise:
+    - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
+    - Select your application, then select **🔑 API Keys** in the sidebar menu.
+    - You can copy your keys from the **Quick Copy** section.
+3. Add your keys to your `.env.local` file. 
 
-Add the following code to your `.env.local` file to set your public and secret keys.
+The final result should look as follows:
 
-**Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys), your secret key should become visible by clicking on the eye icon.
+    <InjectKeys>
 
-<InjectKeys>
+    ```sh filename=".env.local"
+    NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
+    CLERK_SECRET_KEY={{secret}}
+    ```
 
-```sh filename=".env.local"
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
-CLERK_SECRET_KEY={{secret}}
-```
+    </InjectKeys>
 
-</InjectKeys>
+### Add `<ClerkProvider>` to your app
 
-This sets your public and secret keys.
+All Clerk hooks and components must be children of the [`<ClerkProvider>`](/docs/components/clerk-provider) component, which provides active session and user context.
 
-### Wrap your app in `<ClerkProvider>`
+Select your preferred router below to learn how to make this data available across your entire app:
 
-The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/nextjs'` at the top of your file.
-
-<Tabs type="router" items={["App Router", "Pages Router"]}>
-  <Tab>
-    <Callout>
-      The `app/layout.tsx` file might be in your `src` folder if it isn't in your root folder.
-    </Callout>
-
-    For this project, it makes sense to wrap the `<html />` element with `<ClerkProvider>`. This makes the active session and user context accessible anywhere within the app.
-
-    ```tsx filename="/src/app/layout.tsx" {1,10,14}
+<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="/src/app/layout.tsx" {1,10-14}
     import { ClerkProvider } from '@clerk/nextjs'
     import './globals.css'
 
@@ -86,7 +85,7 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
     }: {
       children: React.ReactNode
     }) {
-      return (
+      return (        
         <ClerkProvider>
           <html lang="en">
             <body>{children}</body>
@@ -96,17 +95,12 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
     }
     ```
 
-  </Tab>
-
-  <Tab>
-    For this project, it makes sense to wrap the `<Component />` element with `<ClerkProvider>`. This makes the active session and user context accessible anywhere within `MyApp`.
-
-    ```tsx filename="_app.tsx" {2,6,8}
+    ```tsx filename="_app.tsx" {2,6-8}
       import '@/styles/globals.css'
       import { ClerkProvider } from "@clerk/nextjs";
       import type { AppProps } from "next/app";
       function MyApp({ Component, pageProps }: AppProps) {
-        return (
+        return (          
           <ClerkProvider {...pageProps}>
             <Component {...pageProps} />
           </ClerkProvider>
@@ -115,37 +109,73 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
       export default MyApp;
       ```
 
-  </Tab>
-</Tabs>
+</CodeBlockTabs>
 
-### Require authentication to access your app
+### Add authentication to your app
 
-Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access.
+Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access:
 
-Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory alongside `.env.local`.
+1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
+2. In your `middleware.ts`, export Clerk's [`authMiddleware`](https://clerk.com/docs/references/nextjs/auth-middleware) helper:
+    ```tsx filename="middleware.ts"
+    import { authMiddleware } from "@clerk/nextjs";
 
-Copy and paste the following code into your `middleware.ts`. With this, your entire application is protected.
+    export default authMiddleware({});
+    ```
+3. With `authMiddleware()`, authentication will be enabled by default on all routes that your Next.js middleware runs on, blocking access to all signed out visitors. You can specify valid routes using Next.js's [`matcher`](https://nextjs.org/docs/app/building-your-application/routing/middleware#matcher). Add the following code to your `middleware.ts` to protect your entire application:
 
-```tsx filename="middleware.ts"
-import { authMiddleware } from "@clerk/nextjs";
+    ```tsx filename="middleware.ts" {15}
+    import { authMiddleware } from "@clerk/nextjs";
 
-// This example protects all routes including api/trpc routes
-// Please edit this to allow other routes to be public as needed.
-// See https://clerk.com/docs/references/nextjs/auth-middleware for more information about configuring your Middleware
-export default authMiddleware({});
+    export default authMiddleware({
+      // Routes that can be accessed while signed out
+      publicRoutes: ['/anyone-can-visit-this-route'],
+      // Routes that can always be accessed, and have
+      // no authentication information
+      ignoredRoutes: ['/no-auth-in-this-route'],
+    });
 
-export const config = {
-  matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
-};
-```
+    export const config = {
+      // Protects all routes, including api/trpc.
+      // See https://clerk.com/docs/references/nextjs/auth-middleware
+      // for more information about configuring your Middleware
+      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+    };
+    ```
 
-**Try accessing your app now by visiting [`http://localhost:3000`](http://localhost:3000).** The Middleware will redirect you to your Sign Up page, provided by Clerk's [Account Portal](/docs/account-portal/overview) feature. If you want to make other routes public, check out the [`authMiddleware` reference page](/docs/references/nextjs/auth-middleware). Go ahead and sign up to get access to your application. Your app is now fully protected by Clerk!
+<Callout type="info">
+  See the [`authMiddleware()`](/docs/references/nextjs/auth-middleware#default-behaviour) docs to learn more about `publicRoutes` and `ignoredRoutes`.
+</Callout>
+
+### Try accessing your app
+
+Access your app to verify that authentication is enabled:
+
+1. Run your project with the following terminal command from the root directory of your project:
+    <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+      ```bash filename="terminal"
+      npm run dev
+      ```
+
+      ```bash filename="terminal"
+      yarn dev
+      ```
+
+      ```bash filename="terminal"
+      pnpm dev
+      ```
+
+    </CodeBlockTabs>
+2. Visit [`http://localhost:3000`](http://localhost:3000) to access your app. The Middleware will redirect you to your Sign Up page, provided by Clerk's [Account Portal](/docs/account-portal/overview) feature.
+3. Sign up to gain access to your application.
+4. Log into your new account. You should be able to access it now.
+
 
 ### Embed the `<UserButton />`
 
-Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle.
+[`<UserButton />`](/docs/components/user/user-button) is a [prebuilt component](/docs/components/overview) that allows users to log in, log out, and manage their account information.
 
-Add the `<UserButton />` anywhere inside `<ClerkProvider>` in your app. First, add `import { UserButton } from "@clerk/nextjs";` to the top of your file. Then, add `<UserButton afterSignOutUrl="/"/>`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out.
+Use the following code to add a `<UserButton />` to your app: 
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.tsx" {1,6}
@@ -154,7 +184,7 @@ import { UserButton } from "@clerk/nextjs";
 export default function Home() {
   return (
     <div className="h-screen">
-      <UserButton afterSignOutUrl="/"/>
+      <UserButton />
     </div>
   )
 }
@@ -167,7 +197,7 @@ export default function Home() {
   return (
     <>
       <header>
-        <UserButton afterSignOutUrl="/" />
+        <UserButton />
       </header>
       <div>Your home page's content can go here.</div>
     </>
@@ -177,29 +207,26 @@ export default function Home() {
 
 </CodeBlockTabs>
 
-### Sign out of your application
+Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) to see the `<UserButton />` in action. It should show your avatar from the account you signed in with.
 
-Visit your Next.js application at [`localhost:3000`](http://localhost:3000), click on your avatar, and select **Sign out**. You are now back where you started: a sign-in form.
+### Sign out
 
-### Deploy your application
-
-You're ready to [deploy your app to production](/docs/deployments/overview) and welcome new users!
+Finally, use the `<UserButton />` by selecting your avatar, then selecting **Sign out**.
 
 </Steps>
 
-## You're authenticated!
+## Next steps
 
-Congratulations! Your app is now only available to authenticated users. But this is just the first step.
-
-If you would like a repository that demonstrates many of the features Clerk has to offer, such as user, session, and organization management, check out one of Clerk's demo repositories:
+To see an example application that demonstrates user authentication, and session and organization management, explore one of Clerk's Next.js demo repos:
 
 - [Clerk + Next.js App Router Demo](https://github.com/clerk/clerk-nextjs-demo-app-router)
 - [Clerk + Next.js Pages Router Demo](https://github.com/clerk/clerk-nextjs-demo-pages-router)
 
-## Next steps
+## More resources
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+
     <Cards title="Create custom sign-up and sign-in pages" description="Learn how add custom sign-up and sign-in pages with Clerk components." link="/docs/references/nextjs/custom-signup-signin-pages" cta="Learn More" />
 
     <Cards title="Read user and session data" description="Learn how to use Clerk's hooks and helpers to access the active session and user data in your Next.js application." link="/docs/references/nextjs/read-session-data" cta="Learn More" />
@@ -209,6 +236,10 @@ If you would like a repository that demonstrates many of the features Clerk has 
     <Cards title="Next.js SDK Reference" description="Learn more about additional Next.js methods." link="/docs/references/nextjs/overview" cta="Learn More" />
 
     <Cards title="Use Clerk with Next.js 12 and older" description="Learn how to use Clerk with older versions of Next.js." link="/docs/references/nextjs/usage-with-older-versions" cta="Learn More" />
+
+    <Cards title="Deploy to Production" description="Learn how to deploy your Clerk app to production." link="/docs/deployments/overview" cta="Learn More" />
+
+    <Cards title="Deploy to Vercel" description="Learn how to deploy your Clerk app to production on Vercel." link="/docs/deployments/deploy-to-vercel" cta="Learn More" />
 
   </div>
 </div>
