--- a/docs/references/backend/types/backend-user.mdx
+++ b/docs/references/backend/types/backend-user.mdx
@@ -5,7 +5,7 @@ description: The Backend User object holds information about a user of your appl
 
 # The Backend `User` object
 
-The Backend `User` object is similar to the `User` object as it holds information about a user of your application, such as their unique identifier, name, email addresses, phone numbers, and more. However, the Backend `User` object is different from the `User` object in that it is used in the [Backend API](https://clerk.com/docs/reference/backend-api) and is not directly accessible from the Frontend API.
+The Backend `User` object is similar to the `User` object as it holds information about a user of your application, such as their unique identifier, name, email addresses, phone numbers, and more. However, the Backend `User` object is different from the `User` object in that it is used in the [Backend API](https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetUser) and is not directly accessible from the Frontend API.
 
 ## Properties
 
